# cai

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  PLAN.md  README.md  ROADMAP.md  SPEC.md  TODO.md  cai.rockspec.in  docker-compose.yaml
cmake/: CaiLonejsonAbi.cmake  CaiVersion.cmake  cai-config.cmake.in  cai-dependencies.json.in  cai-rpath.cmake  cai.pc.in  cai_version.h.in  package_archive.cmake  package_checksums.cmake  package_source.cmake
cmake/toolchains/: arm64-apple-darwin.cmake
compose/mcp-everything/: Dockerfile
compose/searxng/: settings.yml
docs/: model-metadata.md
examples/: Makefile  README.md  basic_response.c  common.h  conversation_handles.c  lua-common.lua  streaming_text.c  terminal_chat.c
examples/basic-response/: main.c
examples/chatgpt-login/: main.c
examples/conversation-handles/: main.c
examples/history-export/: main.c
examples/lua-basic/: main.lua
examples/lua-chatgpt-login/: main.lua
examples/lua-conversation/: main.lua
examples/lua-session-state/: main.lua
examples/lua-terminal-chat/: main.lua
examples/mcp-server/: README.md  main.c
examples/mike-mind/: main.c  mike_mind_prompt.h
examples/openrouter-response/: main.c
examples/searxng-search/: main.c
examples/session-state/: main.c
examples/smhi-weather/: main.c
examples/streaming-text/: main.c
examples/terminal-chat/: main.c
include/cai/: auth.h  cai.h  mcp.h  models.h
include/cai/tools/: exec.h  read.h  revgeo.h  searxng.h  todo.h
lua/: cai_lua.c
scripts/: build_lua_rock.sh  build_release_matrix.sh  compose.sh  detect_release_version.sh  dev-down.sh  dev-logs.sh  dev-ps.sh  dev-reset.sh  dev-up.sh  discover_target_tools.sh  host_release_preset.sh  package_release_matrix.sh  render_release_rockspec.sh  stage_lua_rock_sources.sh  stage_release_sources.sh  test-e2e.sh  test_release_source.sh  verify_release_artifacts.sh
src/: cai_agent.c  cai_allocator.c  cai_auth.c  cai_client.c  cai_conversation.c  cai_env.c  cai_error.c  cai_http.c  cai_input_item.c  cai_internal.h  cai_lj.c  cai_lj.h  cai_log.c  cai_lonejson.c  cai_lonejson_impl.c  cai_mcp.c  cai_mcp_client.c  cai_models.c  cai_response.c  cai_source.c  cai_stream.c  cai_tool.c
src/tools/: exec.c  read.c  revgeo.c  searxng.c  todo.c
stash/: lonejson-array-item-streaming-cr.md  lonejson-custom-allocator-alignment-cr.md  lonejson-dynamic-object-writer-cr.md  lonejson-primitive-json-value-writer-cr.md  lonejson-selected-array-rewriter-cr.md  lonejson-spooled-append-cr.md  lonejson-sse-json-event-limit-cr.md  lonejson-visitor-whitespace-cr.md
tests/: cmake_presets_test.cmake  cpkt_link_targets_test.cmake  darwin_linker_route_test.sh  examples_help_smoke.sh  examples_live_smoke.sh  fuzz_common.h  host_dependency_mode_test.cmake  host_release_preset_test.sh  install_metadata_test.cmake  integration_main.c  live_main.c  makefile_targets_test.sh  mcp_client_e2e.c  mcp_client_e2e.sh  mcp_client_smoke.c  mcp_client_source_contract_test.sh  mcp_everything_e2e.c  mcp_example_smoke.c  mcp_fuzz.c  mcp_http_server.c  mcp_http_smoke.c  mcp_inspector_e2e.sh  receiver_usage_test.sh  release_artifacts_darwin_metadata_test.sh  release_live_gate_test.sh  release_lua_version_test.sh  release_manifest_gate_test.sh  response_fuzz.c  rpath_token_test.cmake  session_fuzz.c  stream_fuzz.c  target_tool_discovery_test.sh  test_main.c  todo_fuzz.c  tool_fuzz.c  unit_test_registration_script_test.sh  unit_test_registration_test.sh
tests/fuzz-corpus/mcp/: initialize.json  tools-call.json
tests/fuzz-corpus/response/: completed.json  conversation-item.json
tests/fuzz-corpus/session/: history.json  state.json
tests/fuzz-corpus/stream/: basic.sse  chunked-lines.sse
tests/fuzz-corpus/todo/: board-flow.json  help.json
tests/fuzz-corpus/tool/: read.json  weather.json
tests/lua/: e2e_hosted_web_search.lua  e2e_mcp_todo.lua  e2e_session_continuity.lua  e2e_tool_stream.lua  e2e_usage_limits.lua  test_lua.lua
